# ggml

./: CMakeLists.txt
examples/: CMakeLists.txt  common.cpp  common.h
examples/codegen/: CMakeLists.txt  codegen.cpp  codegen.h  common.cpp  common.h  convert-h5-to-ggml.py  main.cpp  quantize.cpp  serve.cpp
examples/gpt-j/: main.cpp
examples/starcoder/: CMakeLists.txt  main.cpp  serve.cpp  starcoder.h
src/: CMakeLists.txt  ggml.c
